# stream-sim

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: stock_market.yml  web_traffic.yml
src/: __init__.py  __main__.py  config.py  events.py  scheduler.py  state.py
src/config/: loader.py
src/formatters/: __init__.py  csv_format.py  json_format.py
src/generators/: __init__.py  basic.py  datetime.py  faker.py  registry.py
src/outputs/: __init__.py  file.py  http.py  kafka.py  mqtt.py  stdout.py
