# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-stream-simulator"
version = "0.1.0"
description = "A configurable real-time data streaming simulator"
readme = "README.md"
authors = [
    {name = "Data Stream Simulator Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=6.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
faker = ["faker>=8.0.0"]
kafka = ["kafka-python>=2.0.0"]
mqtt = ["paho-mqtt>=1.6.0"]
http = ["aiohttp>=3.8.0"]
all = [
    "faker>=8.0.0",
    "kafka-python>=2.0.0",
    "paho-mqtt>=1.6.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
data-stream-simulator = "data_stream_simulator.__main__:main"

[tool.setuptools]
packages = ["data_stream_simulator"]