# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-sim"
version = "0.1.0"
description = "A configurable real-time data streaming simulator"
readme = "README.md"
authors = [
    {name = "minhduc304"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=6.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
faker = ["faker>=8.0.0"]
kafka = ["kafka-python>=2.0.0"]
mqtt = ["paho-mqtt>=1.6.0"]
http = ["aiohttp>=3.8.0"]
all = [
    "faker>=8.0.0",
    "kafka-python>=2.0.0",
    "paho-mqtt>=1.6.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
stream-sim = "src.__main__:main"

[tool.setuptools]
packages = ["src"]